# Agentic_Alpha_Trading_System

./: .gitignore  DATABASE_SETUP.md  README copy.md  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/agents/: langchain_agents.py  pydantic_agents.py  smol_agents.py
app/data/: demo_data.py  enhanced_market_data.py  enhanced_market_data.py.tmp.26776.1770223182583  enhanced_market_data.py.tmp.55448.1770212284373  enhanced_market_data.py.tmp.55448.1770212316810  enhanced_market_data.py.tmp.55448.1770212416400  enhanced_market_data.py.tmp.55448.1770212435690  market_data.py
app/db/: database.py  database.py.tmp.34684.1770234720021  database.py.tmp.43644.1770213688157  database.py.tmp.43644.1770213821758
app/models/: trading_models.py
app/storage/: csv_storage.py
app/tools/: pydantic_market_tools.py  pydantic_storage_tools.py  storage_tools.py
tests/: __init__.py  run_all_tests.py  test_agent_consistency.py  test_agents.py  test_apis.py  test_compliance.py  test_data_quality.py  test_database_integrity.py  test_edge_cases.py  test_enhanced_features.py  test_langchain_complete.py  test_performance.py
